--- a/frontend/html/login.html
+++ b/frontend/html/login.html
@@ -41,6 +41,9 @@
         <section id="register" class="auth-section hidden">
           <h2>Register</h2>
           <form id="registerForm">
+            <label for="registerId">User ID:</label>
+            <input type="text" id="registerId" name="id" required />
+
             <label for="registerFirstName">First Name:</label>
             <input
               type="text"
