--- a/frontend/html/admin-dashboard.html
+++ b/frontend/html/admin-dashboard.html
@@ -124,6 +124,14 @@
               </tbody>
             </table>
           </div>
+          <!-- Donation Records Modal -->
+          <div id="donationModal" class="modal">
+            <div class="modal-content">
+              <span id="closeModal" class="close">&times;</span>
+              <h2>Donation Records</h2>
+              <div id="donationRecords"></div>
+            </div>
+          </div>
         </section>
         <!-- Admin Management Section -->
         <section class="admin-management-section">
